# QtOpenGL

./: .gitignore  CMakeLists.txt
src/: FragmentShaderCode.glsl  GLWindow.cpp  GLWindow.h  MeShaderCode.cpp  VertexShaderCode.glsl  main.cpp
